@@ -2,7 +2,7 @@
 /*
  * INTER-Mediator Ver.@@@@2@@@@ Released @@@@1@@@@
  * 
- *   by Masayuki Nii  msyk@msyk.net Copyright (c) 2010 Masayuki Nii, All rights reserved.
+ *   by Masayuki Nii  msyk@msyk.net Copyright (c) 2010-2014 Masayuki Nii, All rights reserved.
  * 
  *   This project started at the end of 2009.
  *   INTER-Mediator is supplied under MIT License.
@@ -60,7 +60,7 @@ class DataConverter_MySQLDateTime
 
     function converterFromUserToDB($str)
     {
-        $dtAr = date_parse($str);
+        $dtAr = date_parse(str_replace('.', '-', $str));
         if ($dtAr === false) return $str;
         $dt = '';
         if ($dtAr['year'] !== false && $dtAr['hour'] !== false)
@@ -73,5 +73,3 @@ class DataConverter_MySQLDateTime
     }
 
 }
-
-?>
