@@ -19,6 +19,7 @@ Ver.4.4 (in development)
 - Update the Local Content to improve compatibility with INTERMediator.pagedSize and update the "Practices" sample.
 - INTERMediatorOnPage.additionalExpandingEnclosureFinish and INTERMediatorOnPage.additionalExpandingRecordFinish
   are supported. These are programable interfaces associated with 'post-enclosure' and 'post-repeater' in a context.
+- DataConverter_MySQLDateTime class supports 'YYYY.MM.DD' date format.
 - [BUG FIX] Fix compatibility when using INTERMediator.additionalCondition or INTERMediator.additionalSortKey.
   The affected version is 4.3 only (Thanks to Kentaro Suzuki).
 - [BUG FIX] Fix an error when the value of 'operator' is 'or' or 'and' in addtionalCondition with FileMaker Server.
